Css fix for markdown images being too large. (#1345)

--- a/assets/css/app/custom.scss
+++ b/assets/css/app/custom.scss
@@ -13,6 +13,12 @@
   object-fit: contain !important;
 }
 #wrapper {
+  .blog-content {
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
   #tabbed-nav-bar {
     position: relative;
     z-index: 99;
